chore: use 'flex-end' over 'end'

--- a/src/components/RefreshButtonClient/styles.scss
+++ b/src/components/RefreshButtonClient/styles.scss
@@ -3,7 +3,7 @@
 .refresh-button-container {
   display: flex;
   align-items: center;
-  justify-content: end;
+  justify-content: flex-end;
 
   .refresh-button {
 	display: flex;
